Descomplicando_Kubernetes/day-16/aula/service-giropops-senha.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  namespace: giropops
  labels:
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
