Descomplicando_Kubernetes/day-16/aula/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: giropops
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: tcp-redis
  type: ClusterIP
